# menubar-usage

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-TW.md  burn_rate.py  codex_loader.py  doctor.py  history_loader.py  i18n.json  i18n.py  login_item.py  main.py  menubar.py  pricing.py  project_resolver.py  pyproject.toml  setup_app.py  setup_hook.py  tips_loader.py  tui.py  tui_sprite.py  update_checker.py  usage_cli.py  usage_client.py  usage_lang.py  usage_statusline.py  usage_statusline_forwarder.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  release.yml
adapters/: claude.py  codex.py  rate_limits.py  registry.py  types.py
analyzer/: aggregator.py  blocks.py  reporter.py
assets/panels/: aquarium.html  classic.html  cloud_observation.html  matrix.html  newspaper.html  win95.html  world_cup.html
docs/: index.html
panels/: __init__.py  base.py  web_panel.py
scripts/: build_app.sh  install-hook.sh  install-launchagent.sh  io.miffy.menubar-usage.plist  io.miffy.token-usage.plist  uninstall-launchagent.sh
tests/: test_analyzer_pipeline.py  test_burn_rate.py  test_codex_loader.py  test_doctor.py  test_history_loader.py  test_html_report_tips.py  test_i18n_packaged_path.py  test_login_item.py  test_menubar.py  test_packaged_resources.py  test_panels.py  test_pricing.py  test_project_resolver.py  test_setup_app.py  test_setup_hook.py  test_setup_hook_coexistence.py  test_tips_loader.py  test_tui.py  test_tui_sprite.py  test_ui_tables.py  test_update_checker.py  test_usage_cli.py  test_usage_client.py  test_usage_lang.py  test_usage_statusline.py  test_usage_statusline_forwarder.py
tips/: commands.json
ui/: html_report.py  tables.py
