[project]
name = "menubar-usage"
version = "0.1.0"
description = "A macOS menu bar (and TUI) app showing live Claude Code and Codex token usage."
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    "pyobjc-framework-Cocoa>=11.0",
    "pyobjc-framework-Quartz>=11.0",
    "pyobjc-framework-WebKit>=11.0",
    "rich>=14.0.0,<15.0.0",
]

[project.urls]
Homepage = "https://github.com/miffycs/menubar-usage"
Repository = "https://github.com/miffycs/menubar-usage"
Issues = "https://github.com/miffycs/menubar-usage/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "menubar",
    "tui",
    "pricing",
    "history_loader",
    "usage_rate",
    "usage_statusline",
    "setup_hook",
    "login_item",
    "usage_client",
    "codex_loader",
    "tui_sprite",
    "i18n",
    "usage_cli",
    "burn_rate",
    "update_checker",
    "tips_loader",
    "usage_lang",
    "usage_statusline_forwarder",
]

[tool.setuptools.packages.find]
include = ["adapters*", "analyzer*", "panels*", "ui*"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
]
build = [
    "py2app>=0.28",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# usage_statusline.py is designed to run under macOS's bundled python3 (3.9),
# so it must avoid datetime.UTC (3.11+) and use timezone.utc instead.
"usage_statusline.py" = ["UP017"]
# Imported analytics source is kept with minimal path fixes; keep formatting
# stable for this integration commit.
"adapters/**/*.py" = ["E501", "I001", "SIM108", "UP015", "UP017"]
"analyzer/**/*.py" = ["E501", "I001", "UP015", "UP017"]
"ui/**/*.py" = ["E501", "I001", "UP017", "UP035"]
"usage_cli.py" = ["E501", "I001", "UP017"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
pretty = true
exclude = "^(build|dist|adapters|analyzer|ui)/|^usage_cli\\.py$"

[[tool.mypy.overrides]]
module = ["adapters.*", "analyzer.*", "ui.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

# PyObjC C-extension frameworks ship without type stubs / py.typed marker.
# `ignore_missing_imports` is the standard idiom for stubless modules — this
# is NOT suppressing a real bug, just declaring the frameworks are untyped.
[[tool.mypy.overrides]]
module = ["AppKit", "Foundation", "objc", "Quartz", "WebKit"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
